[tool.poetry]
name = "python-chainlit"
version = "0.1.0"
description = ""
authors = ["alextanhongpin <alextan220990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
chainlit = "^0.7.700"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
